@@ -3,6 +3,6 @@ DIST maven-lifecycle-2.1_pre20070611.tar.bz2 16312 RMD160 7f2de5ef70a6d40dffea90
 DIST maven-lifecycle-2.1_pre20071021-gen-src.tar.bz2 9218 RMD160 a0c7a74f16bd6806c69ccab77fe22679fe45d437 SHA1 cf369dde0c7a8628b10c02e1f5fd79adef9d315a SHA256 c74a0315197704eb0bbe670ff1ea8bc3c8ccca6d3253845a0837e41d55098bea
 DIST maven-lifecycle-2.1_pre20071021.tar.bz2 16631 RMD160 ba85f33ac9b2db064de90790bd28b43e25605f24 SHA1 7268e8b7f2d1e0199c36e069040a03ac1e915dd6 SHA256 1dd9480ecb2a7d7fc6dad5884c9857347cce5ce6c2d5fe65ed1229ec8b79d177
 EBUILD maven-lifecycle-2.1_pre20070611.ebuild 718 RMD160 794e3abbac8718f6bf7ad580a3adfc78aecb128c SHA1 4127e7a866b758a152de893842cb9c2977e4c256 SHA256 73a9ffca8d481e4961c5fe4b28cc61d433d4a8750afa38211bf22b1782903495
-EBUILD maven-lifecycle-2.1_pre20071021.ebuild 809 RMD160 949abfd42ba667e74aa15e1a93457193adb64a13 SHA1 a6436c2d6f92f9a595d221d92bb2e4ed9de99b57 SHA256 e696f4368139cdf6a001049870d405a77d53dfcf61da8f13dff04ab1bc71a3eb
-MISC ChangeLog 437 RMD160 ea0d5c83a96828d051bb80ab5c04e3ef67de7da0 SHA1 42dadf6b6c376164b242d9331ed61228d30a7be2 SHA256 8c689f1e5c17898cf69d863e628b296d86a48b64d1b97caf6c018b4519b399dd
+EBUILD maven-lifecycle-2.1_pre20071021.ebuild 865 RMD160 86c4f7b412f193d2036e57ad5ff34f5d9eecdcd5 SHA1 4d2add50144107c8a6afbcc07a400d4120c0fb56 SHA256 66a9ea817808027af06869cd7d640edb2ab3bce25c66355c48c6a59f499b2fde
+MISC ChangeLog 540 RMD160 33f3aa35884c1f6fd15ca704b0123c7746494bcc SHA1 e8bebdcc269da1b0473e2d3f74f01e6654c258c6 SHA256 6bac3a9e8c4885502624cf42f4272898ef02fd90154b9ac8f474f335a582a8e8
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
