@@ -16,15 +16,15 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 DEP="
->=dev-java/plexus-component-api-1.0.33
->=dev-java/plexus-container-default-1.0.33
->=dev-java/plexus-utils-1.4.7
+>=dev-java/plexus-component-api-1.0_alpha33_pre20071021
+>=dev-java/plexus-container-default-1.0_alpha33_pre20071021
+>=dev-java/plexus-utils-1.4.7_pre20071021
 "
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
 RDEPEND=">=virtual/jre-1.4 ${DEP}"
 JAVA_MAVEN_CLASSPATH="
-plexus-component-api-1.0.33
-plexus-container-default-1.0.33
+plexus-component-api-1.0_alpha33
+plexus-container-default-1.0_alpha33
 plexus-utils-1.4.7
 "
 
